# Privy-ICP

./: Cargo.toml  README copy.md  README.md  dfx.json  package-lock.json  package.json
.git copy/: index
.git copy/logs/refs/heads/: master
.git copy/refs/heads/: master
src/icp_auth_wallet_backend/: Cargo.toml  icp_auth_wallet_backend.did
src/icp_auth_wallet_backend/src/: lib.rs
src/icp_auth_wallet_frontend/: package.json
src/icp_auth_wallet_frontend/src/: App.jsx  firebase.js  nfidLogin.js
src/icp_auth_wallet_frontend/src/components/: WalletConnectBox.css  WalletConnectBox.jsx
src/icp_auth_wallet_frontend/src/hooks/: usePrivyIdentity.jsx
